2009-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Use PQXXTR1, not PGSTD::tr1, thanks Eugene V. Lyubimkin
2009-01-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 libpqxx.spec.in:
  - Depend on postgresql-libs and postgresql-devel, thanks Bob Knock
  - Install x86_64 libs in /usr/lib64, thanks Bob Knock
  - Use %configure, not ./configure, thanks Bob Knock
  - Removed some hard-coding of directories, thanks Bob Knock
 win32/vc-test.mak.template:
  - Removed superfluous dot in library name.
  - Got rid of unnecessary quotes, thanks Andrew Maclean.
2009-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-test.mak.template:
  - Found better place to have $(INTDIR) created, thanks Andrew Maclean.
  - Factored 4-way "if" structure out into two 2-way ones.
2009-01-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/strconv.hxx:
  - Export throw_null_conversion, thanks Andrew Maclean
 win32/INSTALL.txt:
  - Tiny wording fix
2009-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-test.mak.template:
  - Link individual tests' object files into test runner
  - Consistently place all object files and executables in $(INTDIR)
  - Fixed typo in filename "runner.success"
2009-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/util.hxx, src/util.cxx,
 test/unit/test_thread_safety_model.cxx:
  - Provide thread-safety information to the program
 tools/Makefile.am, tools/pqxxthreadsafety.cxx:
  - New tool to print thread-safety information
 tools/rmlo.cxx:
  - Use PGSTD, not std
2009-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Separate doc page about accessing results
2009-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/binarystring.hxx, include/pqxx/result.hxx,
 include/pqxx/util.hxx, src/connection_base.cxx, src/binarystring.cxx,
 src/result.cxx:
  - Made PQAlloc API conform more (almost entirely) to shared_ptr
  - Renamed scoped_array::clear() to reset() to match shared_ptr